--- a/index.html
+++ b/index.html
@@ -437,6 +437,25 @@
       <!-- positioned element -->
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
+          <form class="modal-form">
+            <p class="modal-form-paragraph">Оставьте свои данные, мы вам перезвоним</p>
+            <div class="form-field">
+              <label for="name">Имя</label>
+              <input class="modal-field" type="text" name="name" id="name">
+            </div>
+            <div class="form-field">
+              <label for="tel">Телефон</label>
+              <input class="modal-field" type="tel" name="tel" id="tel">
+            </div>
+            <div class="form-field">
+              <label for="email">Почта</label>
+              <input class="modal-field" type="email" name="email" id="email">
+            </div>
+            <div class="form-field">
+              <label for="comment">Комментарий</label>
+              <textarea class="modal-field" name="comment" id="comment" rows="6" placeholder="Введите текст"></textarea>
+            </div>
+          </form>
           <button type="button" class="close-button" data-modal-close>
             <svg class="modal-icon" width="11px" height="11px">
               <use href="./images/sprite.svg#icon-close"></use>
