--- a/index.html
+++ b/index.html
@@ -455,6 +455,12 @@
               <label for="comment">Комментарий</label>
               <textarea class="modal-field" name="comment" id="comment" rows="6" placeholder="Введите текст"></textarea>
             </div>
+            <div class="checkbox-field">
+              <input class="policy-field" type="checkbox" id="policy" name="policy">
+                <label for="policy">Соглашаюсь с рассылкой и принимаю <a class="policy link" href="">Условия договора</a>
+                </label>
+            </div>
+            <button class="hero-button" type="submit">Отправить</button>
           </form>
           <button type="button" class="close-button" data-modal-close>
             <svg class="modal-icon" width="11px" height="11px">
