adds js speaker

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </ul>
           </div>
           <div class="footer-box">
-            <form class="footer-form">
+            <form class="footer-form js-speaker-form">
               <p class="footer-form-paragraph">Подпишитесь на рассылку</p>
               <input type="email" name="email" id="email" class="e-mail" placeholder="E-mail">
               <button type="submit" class="footer-form-button">Подписаться
@@ -470,5 +470,6 @@
         </div>
       </div>
       <script src="./js/modal.js"></script>
+      <script src="./js/speaker.js"></script>
   </body>
 </html>
