--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
           <div class="footer-box">
             <form class="footer-form js-speaker-form">
               <p class="footer-form-paragraph">Подпишитесь на рассылку</p>
-              <input type="email" name="email" id="email" class="e-mail" placeholder="E-mail" autocomplete="off">
+              <input type="email" name="email" id="subscription-email" class="e-mail" placeholder="E-mail" autocomplete="off">
               <button type="submit" class="footer-form-button">Подписаться
                 <svg class="footer-form-icon" width="24px" height="24px">
                   <use href="./images/sprite.svg#icon-icon-send"></use>
@@ -437,7 +437,7 @@
       <!-- positioned element -->
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <form class="modal-form">
+          <form class="modal-form js-speaker-form">
             <p class="modal-form-paragraph">Оставьте свои данные, мы вам перезвоним</p>
             <div class="form-field">
               <label for="name">Имя</label>
@@ -454,8 +454,8 @@
               </svg>
             </div>
             <div class="form-field">
-              <label for="email">Почта</label>
-              <input class="modal-field" type="email" name="email" id="email" autocomplete="off">
+              <label for="order-email">Почта</label>
+              <input class="modal-field" type="email" name="email" id="order-email" autocomplete="off">
               <svg class="modal-input-icon" width="18px" height="18px">
                 <use href="./images/sprite.svg#icon-email"></use>
               </svg>
