removes margin of the input in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -261,17 +261,18 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-box">
-                <form class="footer-form">
-                    <p class="footer-form-paragraph">Подпишитесь на рассылку</p>
-                    <input type="email" name="email" id="email" class="e-mail" placeholder="E-mail">
+            <form class="footer-form js-speaker-form">
+                <p class="footer-form-paragraph">Подпишитесь на рассылку</p>
+                <div class="footer-box">
+                    <input type="email" name="email" id="subscription-email" class="e-mail" placeholder="E-mail"
+                        autocomplete="off">
                     <button type="submit" class="footer-form-button">Подписаться
                         <svg class="footer-form-icon" width="24px" height="24px">
                             <use href="./images/sprite.svg#icon-icon-send"></use>
                         </svg>
                     </button>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </footer>
 </body>
