adds footer-form placeholder selector to common css

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               </li>
             </ul>
           </div>
-          <form class="footer-form js-speaker-form">
+          <form class="footer-form">
             <p class="footer-form-paragraph">Подпишитесь на рассылку</p>
             <div class="footer-box">
               <input type="email" name="email" id="subscription-email" class="e-mail" placeholder="E-mail" autocomplete="off">
